# PyPcre

./: .gitignore  .gitmodules  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py  setup_utils.py
.github/workflows/: release.yml  unit_tests.yml
format/: format.sh  ruff.toml
pcre/: __init__.py  _pcre2module.c  _stdlib_re.py  cache.py  cpcre2.c  flags.py  pattern_cache.c  pcre.py  re_compat.py  threads.py
pcre/pcre_ext/: cache.c  pcre2.c  pcre2_module.h  util.c
pcre_ext/: allocator_bench.c  atomic_compat.h  cache.c  cache_key.c  error.c  hash.c  memory.c  pattern_cache.c  pcre2.c  pcre2_module.h  util.c
src/pcre/: __init__.py  cache.py  pcre.py  re_compat.py
tests/: __init__.py  pytest.ini  test_accuracy.py  test_api_parity.py  test_basic.py  test_bench.md  test_bench_string.py  test_benchmark.py  test_benchmark_cache.py  test_benchmark_pypcre_vs_regex.md  test_benchmark_pypcre_vs_regex.py  test_benchmark_threads.md  test_benchmark_threads.py  test_cache.py  test_clobber.py  test_clobber_thread.py  test_core.py  test_errors.py  test_hash.py  test_jit.py  test_memory.py  test_module.py  test_setup_utils_multiarch.py  test_simd.py  test_threaded_backend.py  test_transformers_regex.py  test_utf8.py  test_version.py  transformers_regex_usages.jsonl
